# DXVK-Sarek

./: README.md  dxvk.conf  meson.build  meson_options.txt  package-release.sh  version.h.in
src/ddraw/: d3d_common_device.cpp  d3d_common_device.h  d3d_common_interface.cpp  d3d_common_interface.h  d3d_common_material.cpp  d3d_common_material.h  d3d_common_texture.cpp  d3d_common_texture.h  d3d_common_viewport.cpp  d3d_common_viewport.h  d3d_light.cpp  d3d_light.h  d3d_multithread.cpp  d3d_multithread.h  d3d_process_vertices.h  ddraw.def  ddraw.sym  ddraw_caps.h  ddraw_child_object.h  ddraw_class_factory.cpp  ddraw_class_factory.h  ddraw_clipper.cpp  ddraw_clipper.h  ddraw_common_interface.cpp  ddraw_common_interface.h  ddraw_common_surface.cpp  ddraw_common_surface.h  ddraw_format.h  ddraw_gamma.cpp  ddraw_gamma.h  ddraw_include.h  ddraw_main.cpp  ddraw_options.cpp  ddraw_options.h  ddraw_palette.cpp  ddraw_palette.h  ddraw_util.h  ddraw_wrapped_object.h  meson.build  version.rc
src/ddraw/d3d3/: d3d3_device.cpp  d3d3_device.h  d3d3_execute_buffer.cpp  d3d3_execute_buffer.h  d3d3_interface.cpp  d3d3_interface.h  d3d3_material.cpp  d3d3_material.h  d3d3_texture.cpp  d3d3_texture.h  d3d3_viewport.cpp  d3d3_viewport.h
src/ddraw/d3d5/: d3d5_device.cpp  d3d5_device.h  d3d5_interface.cpp  d3d5_interface.h  d3d5_material.cpp  d3d5_material.h  d3d5_texture.cpp  d3d5_texture.h  d3d5_viewport.cpp  d3d5_viewport.h
src/ddraw/d3d6/: d3d6_buffer.cpp  d3d6_buffer.h  d3d6_device.cpp  d3d6_device.h  d3d6_interface.cpp  d3d6_interface.h  d3d6_material.cpp  d3d6_material.h  d3d6_texture.cpp  d3d6_texture.h  d3d6_viewport.cpp  d3d6_viewport.h
src/ddraw/d3d7/: d3d7_buffer.cpp  d3d7_buffer.h  d3d7_device.cpp  d3d7_device.h  d3d7_interface.cpp  d3d7_interface.h  d3d7_state_block.cpp  d3d7_state_block.h
src/ddraw/ddraw/: ddraw_interface.cpp  (+3 more)
(+228 files in other folders)
